--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my page</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <h1>helloy!</h1>
+    <nav>
+      <a href="./about">Winter</a>
+    </nav>
+    <h1>Helloy!</h1>
+    <img src="./img/img.jpg" alt="" />
   </body>
 </html>
